syntax = "proto2";
package toutiao.meizu.app;
message DisplayResult {
    required int32 code = 1;
    optional string message = 2;
    optional DisplayUnitList value = 3;
};

message DisplayUnitList {
    repeated DisplayUnit data = 1;
    required string version = 2;
};

message DisplayUnit {
    required int32 position_id = 1;
    required int32 unit_id = 2;
    required uint32 app_id = 3;
    required float ctr = 4;
};

message SearchResult {
    required int32 code = 1;
    optional string message = 2;
    optional SearchUnitList value = 3;
};

message SearchUnitList {
    repeated SearchUnit data = 1;
    required string version = 2;
};

message SearchUnit {
    required int32 unit_id = 1;
    required uint32 app_id = 2;
    required float ctr = 3;
    required float relevance = 4;
};

message IdeaCTRList {
    repeated IdeaCTR data = 1;
    required string version = 2;
};

message IdeaCTR {
    required int32 idea_id = 1;
    required float ctr = 2;
    optional float cvr = 3;
};